# caloron

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  caloron.example.toml  flake.nix  mkdocs.yml
.github/workflows/: ci.yml
context/: caloron_addendum_a.md  caloron_build_plan.md  caloron_developer_docs.md  comments.md
crates/caloron-harness/: Cargo.toml
crates/caloron-types/: Cargo.toml
docs/: architecture.md  demo.md  index.md
docs/casts/: full-sprint.cast
docs/examples/: e2e-sprint.md  full-sprint.md
docs/guide/: agents.md  concepts.md  configuration.md  getting-started.md  nix.md  noether.md  scalability.md  sprint-lifecycle.md
docs/reference/: cli.md  dag-format.md  feedback.md  git-protocol.md  labels.md
examples/: dag.json
examples/agents/: backend-developer.yaml  senior-reviewer.yaml
examples/demo/: record.sh
examples/e2e-local/: agent_configurator.py  dag.json  full_loop.sh  orchestrator.py  run.sh  run_real.sh  skill_store.py  template_store.py
examples/specs/: full-team.yaml
src/: config.rs  dashboard.rs  main.rs
src/agent/: definition.rs  mod.rs  registry.rs  spawner.rs  worktree.rs
src/daemon/: mod.rs  orchestrator.rs  socket.rs  state.rs
src/dag/: engine.rs
src/git/: client.rs  mod.rs  monitor.rs
src/kickoff/: issue_creator.rs  mod.rs  po_agent.rs  resolver.rs
src/nix/: builder.rs  generator.rs  mod.rs
src/noether/: client.rs
src/retro/: analyzer.rs  collector.rs  improvements.rs  kpis.rs  learnings.rs  mod.rs  report.rs
src/supervisor/: escalation.rs  health_monitor.rs  interventions.rs  (+2 more)
tests/: e2e_sprint.rs
(+11 files in other folders)
