[workspace]
members = ["crates/caloron-types", "crates/caloron-harness", "."]
resolver = "3"

[workspace.dependencies]
caloron-types = { path = "crates/caloron-types" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
octocrab = "0.44"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
thiserror = "2"

[package]
name = "caloron-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
caloron-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
octocrab = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
